# orionbelt-analytics

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGFIX_NAMING_COLLISION.md  CHANGELOG.md  CHANGELOG_2026-02-27.md  CHROMADB_UPGRADE.md  CLA.md  CLAUDE.md  CLAUDE_INTEGRATION.md  CODE_REVIEW_FIXES_2026-02-28.md  CONTRIBUTING.md  DATA_LIFECYCLE_MANAGEMENT.md  Dockerfile  FASTMCP_3.0_MIGRATION.md  GRAPHRAG_INTEGRATION.md  LICENSE  MCP_TOOLS_REFERENCE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_QUERY_INTENT_IMPROVEMENT.md  PHASE3A_CONNECTION_SCOPED_RDF.md  PHASE3B_VERSION_METADATA_CLEANUP.md  README.md  RELEASE_NOTES_v1.0.0.md  SESSION_CONTEXT_MANAGEMENT_PROPOSAL.md  SHUTDOWN_FIX_2026-03-03.md  TESTING_GRAPHRAG_CHROMADB.md  TESTING_INSTRUCTIONS.md  TEST_FIXES_SUMMARY.md  VECTOR_DB_UPGRADE_PROPOSAL.md  claude_mcp_config.json  pyproject.toml  pyrightconfig.json  server.json  server.py  (+3 more)
.claude/skills/: analytical-workflow.md  chart-examples.md  fan-trap-prevention.md  sql-best-practices.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  docker-publish.yml  mcp-audit.yml
docs/: configuration.md  development.md  fan-trap-prevention.md  graphrag.md  integrations.md  obqc.md  tools-reference.md
integrations/chatgpt-custom-gpt/: README.md  instructions.md
integrations/crewai/: README.md  crew_example.py
integrations/google-adk/: README.md  agent_example.py
integrations/langchain/: README.md  agent_example.py
integrations/n8n/: README.md  workflow_ai_agent.json
integrations/openai-agents-sdk/: README.md  agent_example.py
integrations/vercel-ai-sdk/: README.md  route-example.ts
ontology/: oba-example.ttl  oba-shacl.ttl  oba.ttl  spec.md
scripts/: bump-version.sh  publish-docker.sh
src/: __init__.py  async_utils.py  chart_utils.py  config.py  constants.py  database_manager.py  dremio_client.py  exceptions.py  handler_context.py  main.py  obqc_validator.py  ontology_generator.py  oxigraph_store.py  paths.py  r2rml_generator.py  resources.py  security.py  serialization.py  server_state.py  session.py  shacl_validator.py  shared.py  tool_types.py  utils.py  workspace.py
src/drivers/: __init__.py  base.py  bigquery.py  clickhouse.py  databricks.py  dremio.py  duckdb.py  mysql.py  postgresql.py  registry.py  snowflake.py
src/graphrag/: __init__.py  community_detector.py  embedder.py  manager.py  retriever.py  vector_store.py  vector_store_chromadb.py
src/handlers/: __init__.py  chart.py  connection.py  graphrag.py  info.py  ontology.py  ontology_artifacts.py  ontology_generation.py  ontology_io.py  ontology_semantic.py  query.py  rdf.py  schema.py  workspace.py
src/lifecycle/: __init__.py  cleanup.py  metadata.py
src/tools/: __init__.py  chart.py  connection.py  info.py  ontology.py  query.py  schema.py
tests/: conftest.py  test_artifact_schema_isolation.py  test_auto_ontology_background.py  test_cfl_decomposition.py  test_chart_utils.py  test_code_review_fixes.py  test_database_manager.py  test_driver_registry.py  test_graphrag_integration.py  test_obqc_validator.py  test_ontology_generator.py  test_ontology_quality.py  test_ontology_workflow_fix.py  test_owl_axioms.py  test_oxigraph_autopersist.py  test_oxigraph_sparql.py  test_parsed_sql_safety.py  test_phase1_token_reduction.py  test_phase2_hierarchical.py  test_reachability.py  test_resources.py  test_security.py  test_server.py  test_server_state.py  test_session_eviction.py  test_shacl_validation.py  test_validate_sql_syntax_integration.py  test_workspace.py  test_workspace_restore.py  verify_phase1.py
